[project]
name = "gov-scheme-env"
version = "1.0.0"
description = "RL environment for matching Indian citizens to government schemes"
requires-python = ">=3.10"
dependencies = [
    "fastapi==0.111.0",
    "uvicorn==0.29.0",
    "pydantic==2.7.1",
    "python-dotenv==1.0.1",
    "openai>=2.7.2",
    "openenv-core>=0.2.0",
]

[project.scripts]
server = "app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"